tests/bad/template_mismatch_arg_count.oc
/// fail: Invalid number of template arguments for Foo

struct Foo<K, V> {}

def main() {
    let x: Foo<i32, f64>
    let y: Foo<f32>
}